--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+coverage==7.4.0
 elasticsearch==7.16.2
 matplotlib==3.3.4
 python-dotenv==0.15.0
@@ -10,4 +11,5 @@ pygraphviz==1.6
 r2pipe==1.7.3
 numpy==1.16.3
 pyzipper==0.3.6
+pytest==7.4.4
 pre-commit==3.5.0
