--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Build & Test
 
 on:
   workflow_dispatch:
@@ -20,10 +20,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
+
+    - name: Cache `docker build`
+      id: cache-docker-build
+      uses: actions/cache@v3
       with:
-        python-version: "3.8"
-    - name: Building the test container
+        key: ${{ runner.os }}--${{ hashFiles('build/radare2-5.8.8/Dockerfile', 'Dockerfile', 'docker-compose.yml') }}
+        path: ~/image_malcallgraph
+
+    - name: Building the test container - `docker build` & `docker save`
+      if: ${{ steps.cache-docker-build.output.cache-hit != 'true' }}
       run: |
-        docker compose up --build malcallgraph_test
+        docker compose build --no-cache malcallgraph_test
+        docker save image_malcallgraph > ~/.image_malcallgraph.tar
+
+    - name: Testing
+      run: |
+        docker load --input ~/.image_malcallgraph.tar
+        docker compose up malcallgraph_test
