Fix cache path ~/image_malcallgraph.tar

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,13 @@ jobs:
       uses: actions/cache@v3
       with:
         key: ${{ runner.os }}--${{ hashFiles('build/radare2-5.8.8/Dockerfile', 'Dockerfile', 'docker-compose.yml') }}
-        path: ~/image_malcallgraph
+        path: ~/image_malcallgraph.tar
 
     - name: Building the test container - `docker build` & `docker save`
       if: ${{ steps.cache-docker-build.output.cache-hit != 'true' }}
       run: |
         docker compose build --no-cache malcallgraph_test
-        docker save image_malcallgraph > ~/.image_malcallgraph.tar
+        docker save image_malcallgraph > ~/image_malcallgraph.tar
 
     - name: Testing
       run: |
