Add one more rule to detect instr. parameter labes (`resource`). Add volume mapping to fix the cached build in github actions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       network: host
       dockerfile: ./Dockerfile
     command: python3 -m pytest -ra ./test/test.py
+    volumes:
+      - ./src:/usr/callgraph/src
+      - ./test:/usr/callgraph/test
     network_mode: "host"
     environment:
       - MBAZAAR_DIR_SAMPLES=/usr/callgraph/mbazaar
