--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       network: host
       dockerfile: ./Dockerfile
-    command: python3 -m pytest -ra ./test/test.py
+    command: coverage run -m pytest -ra ./test/test.py && coverage lcov --omit="./test/*" -o ./test/coverage.lcov
     volumes:
       - ./src:/usr/callgraph/src
       - ./test:/usr/callgraph/test
