--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
       context: .
       network: host
       dockerfile: ./Dockerfile
-    command: coverage run -m pytest -ra ./test/test.py && coverage lcov --omit="./test/*" -o ./test/coverage.lcov
+    command: sh -c "
+      coverage run --omit=./test/*,__init__.py -m pytest -ra ./test/test.py &&
+      coverage lcov -o ./test/coverage.lcov
+      "
     volumes:
       - ./src:/usr/callgraph/src
       - ./test:/usr/callgraph/test
