--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,4 @@ jobs:
       uses: romeovs/lcov-reporter-action@v0.2.11
       with:
         lcov-file: ./test/coverage.lcov
+        github-token: ${{ secrets.GITHUB_TOKEN }}
