--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    permissions:
+        pull-requests: write
 
     steps:
     - uses: actions/checkout@v3
