--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     hooks:
       - id: run-unittests
         name: run unittests
-        entry: bash -c "docker compose up --build malcallgraph_test --exit-code-from malcallgraph_test"
+        entry: bash -c "docker compose up --build malflow_test --exit-code-from malflow_test"
         require_serial: true
         verbose: true
         language: system
