Finalize the dockerized train loop. Only remaining: plot_heatmaps.py
```
[+] Running 1/1
 ✔ Container container_malflow_train  Recreated                                                                                                                                0.2s
Attaching to container_malflow_train
container_malflow_train  | 2024-03-02 15:12:50,651 [INFO    ] Loading the dataset...
container_malflow_train  | using CPU, this will be slow
container_malflow_train  | Epoch: [0][   1/4873]        Time  0.091 ( 0.091)    Data  0.004 ( 0.004)    Loss 7.3609e+00 (7.3609e+00)    Acc@1   0.00 (  0.00)   Acc@5   0.00 (  0.00)
```

--- a/src/core/processors/bagnet/docker-compose.yml
+++ b/src/core/processors/bagnet/docker-compose.yml
@@ -14,4 +14,7 @@ services:
       python3 -m core.processors.bagnet.main -m core.processors.bagnet.train_definitions
       "
     env_file:
-      - dataset.env
+      - .env
+    volumes:
+      - $DATASETS_BODMAS_GROUND_TRUTH_PATH:$DATASETS_BODMAS_GROUND_TRUTH_PATH
+      - $DATASETS_BODMAS_IMG_DIR_PATH:$DATASETS_BODMAS_IMG_DIR_PATH
