Add various sklearn metrics to tb. https://github.com/attilamester/pytorch-examples/pull/1/commits/02b9d9b3ac7bb7ba09b96c1dc18f4daa049b3c9f

--- a/src/core/processors/bagnet/Dockerfile
+++ b/src/core/processors/bagnet/Dockerfile
@@ -3,7 +3,7 @@ FROM docker.io/attilamester/cuda-11.8.0.base-pytorch
 WORKDIR /usr/malflow
 
 RUN apt update && apt install -y wget && \
-    wget -O /tmp/main.py https://raw.githubusercontent.com/attilamester/pytorch-examples/feature/83/imagenet/main.py
+    wget -O /tmp/main.py https://raw.githubusercontent.com/attilamester/pytorch-examples/feature/83/imagenet/main.py?v=3
 
 COPY . .
 RUN cp /tmp/main.py core/processors/bagnet/main.py
