--- a/src/core/processors/bagnet/docker-compose.yml
+++ b/src/core/processors/bagnet/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       dockerfile: ./core/processors/bagnet/Dockerfile
 #    entrypoint: /bin/bash --login -c "source /root/.bashrc"
 #    command: /bin/bash -c "source /root/.bashrc && python3 -c \"import torch; print('Works!')\""
-    command: /bin/bash -c "source /root/.bashrc &&
+    command: /bin/bash -c "source /root/.bashrc && \
       python3 -m core.processors.bagnet.main \
         -m core.processors.bagnet.train_definitions \
         -tb /tb_log_dir
+        --checkpoints /tb_log_dir
       "
     env_file:
       - .env
