--- a/src/core/processors/bagnet/Dockerfile
+++ b/src/core/processors/bagnet/Dockerfile
@@ -2,8 +2,8 @@ FROM docker.io/attilamester/cuda-11.8.0.base-pytorch
 
 WORKDIR /usr/malflow
 
-RUN apt update && apt install -y wget && \
-    wget -O /tmp/main.py https://raw.githubusercontent.com/attilamester/pytorch-examples/feature/83/imagenet/main.py?v=3
-
+RUN apt update && apt install -y wget
+COPY core/processors/bagnet/download_dependencies.sh .
+RUN ./download_dependencies.sh main.tmp.py
 COPY . .
-RUN cp /tmp/main.py core/processors/bagnet/main.py
+RUN cp main.tmp.py core/processors/bagnet/main.py
