--- a/src/core/processors/cg_image_classification/docker-compose.yml
+++ b/src/core/processors/cg_image_classification/docker-compose.yml
@@ -11,8 +11,8 @@ services:
 #    entrypoint: /bin/bash --login -c "source /root/.bashrc"
 #    command: /bin/bash -c "source /root/.bashrc && python3 -c \"import torch; print('Works!')\""
     command: /bin/bash -c "source /root/.bashrc && \
-      python3 -m core.processors.bagnet.main \
-        -m core.processors.bagnet.train_definitions \
+      python3 -m core.processors.cg_image_classification.main \
+        -m core.processors.cg_image_classification.train_definitions \
         -tb /tb_log_dir
         --checkpoints /tb_log_dir
       "
