Fix bagnet model num-class loading. Add dep. torchmetrics==1.3.1. Adapt the loop to log every 10th epoch the conf matrix + pr curves

--- a/src/core/processors/cg_image_classification/docker-compose.yml
+++ b/src/core/processors/cg_image_classification/docker-compose.yml
@@ -7,17 +7,19 @@ services:
     build:
       context: ../../../
       network: host
-      dockerfile: ./core/processors/bagnet/Dockerfile
+      dockerfile: ./core/processors/cg_image_classification/Dockerfile
 #    entrypoint: /bin/bash --login -c "source /root/.bashrc"
 #    command: /bin/bash -c "source /root/.bashrc && python3 -c \"import torch; print('Works!')\""
     command: /bin/bash -c "source /root/.bashrc && \
       python3 -m core.processors.cg_image_classification.main \
         -m core.processors.cg_image_classification.train_definitions \
-        -tb /tb_log_dir
-        --checkpoints /tb_log_dir
+        -tb /tb_log_dir \
+        --checkpoints /tb_log_dir \
+        --print-freq 10
       "
     env_file:
       - .env
+      - hparams.env
     volumes:
       - ./tensorboard/log_dir:/tb_log_dir:z
       - $DATASETS_BODMAS_GROUND_TRUTH_PATH:$DATASETS_BODMAS_GROUND_TRUTH_PATH
