--- a/src/processors/cg_image_classification/tensorboard/Dockerfile
+++ b/src/processors/cg_image_classification/tensorboard/Dockerfile
@@ -3,4 +3,6 @@ FROM python:3.8-alpine as base
 RUN apk update && apk add make automake gcc g++ subversion python3-dev && \
     python3 -m pip install pip==23.0 && python3 -m pip install tensorboard==2.14.0 six==1.16.0
 
+RUN python3 -m pip install protobuf==4.25
+
 CMD python3 -m tensorboard.main --logdir /log_dir --port 6006 --host 0.0.0.0
