--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "malflow"
-version = "0.0.6"
+version = "0.0.9"
 description = "Malware callgraph analysis"
 readme = "src/malflow/README.md"
-requires-python = ">= 3.8, < 3.9"
+requires-python = ">= 3.8, < 3.11"
 keywords = ["sample", "setuptools", "development"]
 authors = [
   { name="Attila Mester", email="attilamester21@gmail.com" },
@@ -18,8 +18,8 @@ classifiers = [
 ]
 dependencies = [
     "Brotli",
-    "networkx>=3.1.0",
-    "numpy>=1.24.0",
+    "networkx>=2.7.0",
+    "numpy>=1.22.0,<=2.2.6",
     "pygraphviz",
     "python-dotenv",
     "r2pipe==1.8.8",
