--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "malflow"
-version = "0.0.11"
+version = "0.0.14"
 description = "Malware callgraph analysis"
-readme = "src/malflow/README.md"
+readme = "README.md"
 requires-python = ">= 3.8, < 3.11"
 keywords = ["sample", "setuptools", "development"]
 authors = [
